Fix desktop header dropdown menu clipping off page.
The width of the account menu dropdown header is determined by the
length of one's username. Users with short names cause the dropdown
menu to partially clip off the right side of the page, which is
unsightly and impedes usage thereof. This commit enforces a minimum
width to prevent that.

Alternate approaches such as right-aligning the dropdown proved
unwieldy with CSS when fixing this same bug on the upstream.

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -4457,7 +4457,7 @@ textarea {
 }
 @media (min-width: 767.98px) {
 	.navbar {
-		padding: 0.5rem 3rem 0.4rem 0.5rem;
+		padding: 0.5rem 1.5rem 0.4rem 0.5rem;
 }
 }
 blockquote {
@@ -5063,6 +5063,10 @@ th, td {
 	.settings-nav .nav-link {
 		font-size: 12px;
 	}
+}
+
+#account-menu-header, #account-menu {
+	min-width: 10em;
 }
 
 .glow .post-title, .glow a, .glow .post-meta *, .glow .user-info *, .glow .comment-text, .glow .comment-actions *, .glow  {
